kubernetes/apps/network/external-service/ntopg/endpointslice.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-ntopg
  labels:
    kubernetes.io/service-name: internal-ntopg
addressType: IPv4
endpoints:
  - addresses:
      - ${OPNSENSE_IP}
ports:
  - port: 3000
    name: http
    protocol: TCP
