kubernetes/apps/network/external-service/ntopg/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-ntopg
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 3000
      name: http
