kubernetes/apps/network/external-service/ntopg/ingress.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-ntopg
  labels:
    kubernetes.io/service-name: internal-ntopg
addressType: IPv4
endpoints:
  - addresses:
      - ${OPNSENSE_IP}
ports:
  - port: 3000
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: internal-ntopg
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-ntopg
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: internal
  rules:
    - host: ntopg.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-ntopg
                port:
                  number: 80
